--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,7 @@ body {
 
 h1 {
   display: flex;
+  padding: 2rem;
   align-items: center;
   justify-content: center;
   margin-top: 5%;
@@ -52,7 +53,7 @@ h1 {
   transform: translate(-50%, -50%);
   border-radius: 4rem;
   padding: 10px;
-  margin-bottom: 5rem;
+  margin-top: 5rem;
 }
 
 .search__box {
@@ -109,13 +110,13 @@ align-items: center; */
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 10rem auto 0;
+  margin: 5rem auto 0 0;
 }
 
 .invalidCepMessage {
   color: rgba(235, 155, 155, 0.733);
   font-size: 1.5rem;
-  margin-top: 2rem;
+  margin-top: 4rem;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
